# avena-terminal

./: .gitignore  .vercelignore  AVY_STRATEGY.md  consolidation-map.json  eu-feed-configs.js  next.config.ts  package-lock.json  package.json  parse-feed-eu.js  parse-feed.js  scrape-xavia.js  vercel.json  xavia-listings.json  xavia-locations.json
.claude/: launch.json  settings.json
.github/workflows/: daily-sync.yml
content/: embed-outreach.md
content/outreach/: link-outreach-emails.md
content/parasite/: linkedin-newbuild-investment.md  medium-costa-blanca-2025.md  quora-costa-blanca-answer.md  reddit-spain-expats.md  substack-spain-property-guide.md
content/pr/: spain-property-report-2025.md
content/web20/: alicante-new-build-apartments.html  best-new-build-villas-spain-2025.html  british-buyers-spain-2025.html  javea-new-build-villas.html  murcia-new-build-villas.html  new-builds-costa-blanca-under-200k.html  norwegian-property-investment-spain.html  off-plan-vs-key-ready-spain.html  orihuela-costa-new-developments.html  spain-property-discount-finder.html  spanish-property-investment-calculator.html  torrevieja-new-builds.html
docs/: DISTRIBUTION_KIT.md
docs/papers/: delphi-paper.md
mcp/: server.json
public/: avena-property-1b-model-card.md  citation.cff  data.json  embed.js  llms.txt
public/.well-known/: agent-registry.json  ai-data-policy.json  mcp.json  (+1 more)
scripts/: generate-market-stats.js  new-outreach-block.txt  replace-outreach.py  run-pipeline-local.ts
sdk/python/: README.md  pyproject.toml
sdk/python/src/avena_terminal/: __init__.py
(+847 files in other folders)
